mkdocs-material-8.0.5 (2012-12-04)

  * Fixed #3302: Footer refactoring induced ellipsis in some browsers
  * Fixed #3313: Details always rendered closed on load (8.0.4 regression)

mkdocs-material-8.0.4+insiders-4.3.0 (2021-12-05)

  * Added support for custom fonts in social cards
  * Fixed #3300: Announcement bar reappearing when using instant loading

mkdocs-material-8.0.4 (2012-12-04)

  * Improved support for deeply nested code annotations
  * Improved code annotation and copy-to-clipboard interop
  * Improved styling for code annotations inside admonitions
  * Fixed #3274: Invalid anchor positioning when using instant loading
  * Fixed #3294: Lists after code blocks without code annotations disappearing
  * Fixed several positioning issues for code annotations
  * Fixed JavaScript source map roots

mkdocs-material-8.0.3+insiders-4.2.0 (2021-12-02)

  * Added support for dismissable announcement bar
  * Added support for named placeholders in feedback widget

mkdocs-material-8.0.3 (2012-12-02)

  * Removed deprecated google_analytics setting (was forgotten in 8.0.0)
  * Fixed syntax error in Swedish and Polish translations
  * Fixed #3283: Invalid back-to-top button position with sticky navigation tabs
  * Fixed #3285: Default details marker showing due to Safari bug

mkdocs-material-8.0.2+insiders-4.1.0 (2021-11-30)

  * Added support for passing page title to feedback forms

mkdocs-material-8.0.2 (2021-11-30)

  * Fixed #3275: Code annotations always disappear on click

mkdocs-material-8.0.1 (2021-11-28)

  * Improved rendering of code annotation markers
  * Fixed #3265: Wrong margin on nested admonitions
  * Fixed wrong box-sizing for code annotations in details

mkdocs-material-8.0.0 (2021-11-28)

  * Added support for code annotations
  * Added support for anchor tracking
  * Added support for version warning
  * Added copyright partial for easier override
  * Removed deprecated content tabs legacy implementation