@@ -1,3 +1,7 @@
+mkdocs-material-8.0.5+insiders-4.x.x (2021-xx-xx)
+
+  * Updated German translations for cookie consent
+
 mkdocs-material-8.0.5 (2012-12-04)
 
   * Fixed #3302: Footer refactoring induced ellipsis in some browsers
